# mathlib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: math.h  mathlib.h  mathlib.hpp
src/: math.cpp  mathlib.cpp  mathlib.hpp
